--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -1,10 +1,17 @@
-date: September 8, 2025
+date: Pending
+
+behavior_changes:
+# *Changes that are expected to cause an incompatibility if applicable; deployment changes are likely required*
+
+minor_behavior_changes:
+# *Changes that may cause incompatibilities for some users, but should not for most*
 
 bug_fixes:
-- area: http
-  change: |
-    Fixed a bug where the ``response_headers_to_add`` may be processed multiple times for the local responses from
-    the router filter.
-- area: release
-  change: |
-    Fix distroless image to ensure nonroot.
+# *Changes expected to improve the state of the world and are unlikely to have negative effects*
+
+removed_config_or_runtime:
+# *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
+
+new_features:
+
+deprecated:
