--- a/source/extensions/filters/common/local_ratelimit/BUILD
+++ b/source/extensions/filters/common/local_ratelimit/BUILD
@@ -20,5 +20,6 @@ envoy_cc_library(
         "//source/common/common:token_bucket_impl_lib",
         "//source/common/protobuf:utility_lib",
         "@envoy_api//envoy/extensions/common/ratelimit/v3:pkg_cc_proto",
+        "@envoy_api//envoy/type/v3:pkg_cc_proto",
     ],
 )
