--- a/source/extensions/quic/crypto_stream/BUILD
+++ b/source/extensions/quic/crypto_stream/BUILD
@@ -9,10 +9,6 @@ load(
     "envoy_extension_package",
     "envoy_select_enable_http3",
 )
-load(
-    "//bazel/external:quiche.bzl",
-    "envoy_quic_cc_library",
-)
 
 licenses(["notice"])  # Apache 2
 
@@ -20,15 +16,20 @@ licenses(["notice"])  # Apache 2
 
 envoy_extension_package()
 
-envoy_quic_cc_library(
+envoy_cc_library(
     name = "envoy_quic_crypto_server_stream_lib",
-    srcs = ["envoy_quic_crypto_server_stream.cc"],
-    hdrs = ["envoy_quic_crypto_server_stream.h"],
-    deps = [
+    srcs = envoy_select_enable_http3(["envoy_quic_crypto_server_stream.cc"]),
+    hdrs = envoy_select_enable_http3(["envoy_quic_crypto_server_stream.h"]),
+    visibility = [
+        "//source/common/quic:__subpackages__",
+        "//test:__subpackages__",
+    ],
+    deps = envoy_select_enable_http3([
         "//envoy/registry",
         "//source/common/quic:envoy_quic_server_crypto_stream_factory_lib",
         "@envoy_api//envoy/extensions/quic/crypto_stream/v3:pkg_cc_proto",
-    ],
+    ]),
+    alwayslink = LEGACY_ALWAYSLINK,
 )
 
 envoy_cc_extension(
@@ -42,11 +43,16 @@ envoy_cc_extension(
     ]),
 )
 
-envoy_quic_cc_library(
+envoy_cc_library(
     name = "envoy_quic_crypto_client_stream_lib",
-    srcs = ["envoy_quic_crypto_client_stream.cc"],
-    hdrs = ["envoy_quic_crypto_client_stream.h"],
-    deps = [
-        "//source/common/quic:envoy_quic_client_crypto_stream_factory_lib",
+    srcs = envoy_select_enable_http3(["envoy_quic_crypto_client_stream.cc"]),
+    hdrs = envoy_select_enable_http3(["envoy_quic_crypto_client_stream.h"]),
+    visibility = [
+        "//source/common/quic:__subpackages__",
+        "//test:__subpackages__",
     ],
+    deps = envoy_select_enable_http3([
+        "//source/common/quic:envoy_quic_client_crypto_stream_factory_lib",
+    ]),
+    alwayslink = LEGACY_ALWAYSLINK,
 )
