--- a/test/coverage.yaml
+++ b/test/coverage.yaml
@@ -26,6 +26,7 @@ directories:
   source/common/tracing: 95.8
   source/common/watchdog: 60.0  # Death tests don't report LCOV
   source/exe: 94.4  # increased by #32346, need coverage for terminate_handler and hot restart failures
+  source/extensions/access_loggers/filters/cel: 95.7
   source/extensions/api_listeners: 55.0  # Many IS_ENVOY_BUG are not covered.
   source/extensions/api_listeners/default_api_listener: 59.0  # Many IS_ENVOY_BUG are not covered.
   source/extensions/common/aws: 98.5
