--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -1,6 +1,15 @@
 date: Pending
 
 behavior_changes:
+- area: server
+  change: |
+    Added container-aware CPU detection that respects cgroup CPU limits in addition to hardware thread count
+    and CPU affinity. Envoy now uses the minimum of hardware threads, CPU affinity, and cgroup CPU limits
+    to determine the number of worker threads by default. This provides better resource utilization in
+    containerized environments (Docker, Kubernetes) where CPU limits are set via cgroups. The new behavior
+    is enabled by default and can be disabled by setting the runtime guard
+    ``envoy.reloadable_features.enable_cgroup_cpu_detection`` to ``false``. When disabled, Envoy will fall
+    back to the previous behavior of using only hardware thread count and CPU affinity for worker thread calculation.
 - area: http
   change: |
     A route refresh will now result in a tracing refresh. The trace sampling decision and decoration
