--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -361,8 +361,9 @@ new_features:
     See `MaxMind DB build_epoch <https://maxmind.github.io/MaxMind-DB/#build_epoch>`_ for more details.
 - area: http
   change: |
-    Added support for :ref:`host_simplification_rules <envoy_v3_api_field_config.route.v3.RouteConfiguration.host_simplification_rules>` to allow for
-    regular expression substitutions to "simplify" a host before doing
-    virtual host matching.
+    Added support for :ref:`host_simplification_rules
+    <envoy_v3_api_field_config.route.v3.RouteConfiguration.host_simplification_rules>`
+    to allow for regular expression substitutions to "simplify" a host
+    before doing virtual host matching.
 
 deprecated:
