--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -387,7 +387,7 @@ new_features:
 - area: http
   change: |
     Added support for header removal based on header key matching. The new
-    :ref:`remove_on_match <envoy_v3_api_field_envoy.config.common.mutation_rules.v3.HeaderMutation.remove_on_match>`
+    :ref:`remove_on_match <envoy_v3_api_field_config.common.mutation_rules.v3.HeaderMutation.remove_on_match>`
     allows removing headers that match a specified key pattern. This enables more flexible and
     dynamic header manipulation based on header names.
 - area: geoip
