--- a/.github/workflows/envoy-checks.yml
+++ b/.github/workflows/envoy-checks.yml
@@ -37,14 +37,17 @@ jobs:
       packages: read
       pull-requests: read
     if: |
-      github.event.workflow_run.conclusion == 'success'
-      && github.event.workflow_run.repository.full_name == github.repository
-      && contains(fromJSON('["pull_request_target", "push", "schedule"]'), github.event.workflow_run.event)
-      && (github.repository == 'envoyproxy/envoy' || vars.ENVOY_CI)
+      (github.event_name == 'workflow_dispatch')
+      || (github.event.workflow_run.conclusion == 'success'
+          && github.event.workflow_run.repository.full_name == github.repository
+          && contains(fromJSON('["pull_request_target", "push", "schedule"]'), github.event.workflow_run.event)
+          && (github.repository == 'envoyproxy/envoy' || vars.ENVOY_CI))
     uses: ./.github/workflows/_load.yml
     with:
       check-name: checks
       # head-sha: ${{ github.sha }}
+      request: ${{ github.event_name == 'workflow_dispatch' && '{}' || '' }}
+      trusted: ${{ github.event_name == 'workflow_dispatch' && 'true' || '' }}
 
   build:
     secrets:
