--- a/.github/workflows/envoy-checks.yml
+++ b/.github/workflows/envoy-checks.yml
@@ -51,8 +51,8 @@ jobs:
     with:
       check-name: checks
       # head-sha: ${{ github.sha }}
-  request: ${{ github.event_name == 'workflow_dispatch' && inputs.request || '' }}
-  trusted: ${{ github.event_name == 'workflow_dispatch' && inputs.trusted || '' }}
+      request: ${{ inputs.request }}
+      trusted: ${{ inputs.trusted }}
 
   build:
     secrets:
